css/template.css
body {
  font-family: 'Inconsolata','Courier New',Courier,monospace;
  background-color: #222222;
}

#view{
  padding: 1%;
  /*border-color: #ffffff;*/
}

#svg{
  /* testing */
  /*background-color: white;*/
  /* /testing */
  width: 100%;
  height: 100%;
  position: absolute;
  overflow: hidden;
}

#sidebar{
  width: 100%
  height: 100%;
  padding: 10% 0; /* adds north and south padding to "center" */
  position: fixed;
}
/*counter {
  width: 100%;
  height: 100%;
  position: absolute;
}*/

#admin-menu{
  height: 10%;
  width: 0%;
  padding: 20% 0; /* adds north and south padding to "center" */
  text-align: center;
}

#user-menu{
  height: 10%;
  width: 0;
  padding: 20% 0; /* adds north and south padding to "center" */
  text-align: center;
}
.axis text { display: none; }
.axis path, .axis line {
  fill: none;
  stroke: #303030;
}


.template {
  text-align: center;
}

/* Bootstrap class overrides*/
.panel {
  background-color: #303030;
  border-color: #303030;
  color: white;
}

.btn-default {
  background-color: #464545;
  border-color: #464545;
}

.navbar {
  /*background-color: #375a7f;*/
  background-color: #222222;
  border-color: #375a7f;
  border-color: #222222;
  opacity: .50;
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
  background-color: #303030;
  border-color: #303030;
  color: white;
}
.navbar-brand {
  font-family: Helvetica;
  color: white !important;
}

.dropdown-menu {
  top: 0;
  left: 100%;
}

